fixes main menu spacing

--- a/source/sass/_global_elements.scss
+++ b/source/sass/_global_elements.scss
@@ -153,7 +153,7 @@
 
 .main-menu {
     padding: 0;
-    max-width: 670px;
+    max-width: 570px;
     margin: 0 10px 15px;
     list-style-type: none;
     display: none;
