--- a/webroot/assets/css/style.css
+++ b/webroot/assets/css/style.css
@@ -3325,7 +3325,7 @@ i {
 /* line 154, ../../../source/sass/_global_elements.scss */
 .main-menu {
   padding: 0;
-  max-width: 670px;
+  max-width: 570px;
   margin: 0 10px 15px;
   list-style-type: none;
   display: none;
